<resources>
    <string name="app_name">Fyber</string>
    <string name="not_connected_internet">Internet connection not available.</string>
    <string name="toast_process_error">This app is going to exit due to an error of data processing.</string>
    <string name="loading">Loading on&#8230;</string>
    <string name="fab_menu_help">Help</string>
    <string name="fab_menu_link">App Link</string>
    <string name="toast_last_page">Last page.</string>
    <string name="toast_no_data">No data available.</string>
    <string name="toast_disconnect_phrase">Can not access the internet.</string>
    <string name="toast_server_error_phrase">Can not connect to the server, try again later.</string>
    <string name="toast_response_signature_mismatch_phrase">The signature of response is not valid.</string>
    <string name="hint_comment">Input your comment</string>
    <string name="post_button">Post</string>
    <string name="offer_id">Offer ID : </string>
    <string name="teaser">Teaser : </string>
    <string name="required_actions">Actions : </string>
    <string name="payout">PayOut : </string>
    <string name="link">Link : </string>
    <string name="offer_types">Offer Types </string>
    <string name="offer_type_id">Type ID :  </string>
    <string name="offer_type_readable">Readable :  </string>
    <string name="time_to_payout">Time to payout</string>
    <string name="amount">Amount : </string>
    <string name="readable">Readable : </string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_point">Points</string>
    <string name="drawer_item_virtual_currency">Virtual Currency</string>
    <string name="drawer_item_language">Language</string>
    <string name="drawer_item_country">Country</string>
    <string name="drawer_item_offer_id">Offer ID</string>
    <string name="drawer_item_payout">Pay Out</string>
    <string name="drawer_item_gallery">View Gallery</string>
    <string name="offer_list_view_list_menu">List View</string>
    <string name="offer_list_view_grid_menu">Grid View</string>
    <string name="offer_info_view_back_menu">Back</string>
    <string name="offer_info_view_view_comments_menu">View Comments</string>
    <string name="offer_info_view_star_menu">Bookmark</string>
    <string name="offer_info_view_subscription_menu">Subscription</string>
    <string name="offer_info_view_share">Share</string>
    <string name="offer_info_view_share_others_menu">Share to others</string>
    <string name="offer_info_view_share_facebook_menu">Share to Facebook</string>
    <string name="drawer_item_link">Link</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_bookmark">Bookmark</string>
    <string name="drawer_item_subscription">Subscription</string>
    <string name="drawer_item_offer_type">Offer Type</string>
    <string name="drawer_item_event">Event</string>
    <string name="drawer_item_comments">Comments</string>
    <string name="drawer_item_bookmarked_count">Bookmarked</string>
    <string name="drawer_item_subscribed_count">Subscribed</string>
    <string name="gallery">Gallery</string>
    <string name="toast_bookmark_removed">This bookmark have been released.</string>
    <string name="toast_bookmarked">This Offers have been bookmarked.</string>
    <string name="toast_subscribed">This Offers have been subscribed.</string>
    <string name="toast_unsubscribed">This Offers have been unsubscribed.</string>
    <string name="restart_phrase">&#10;Please restarts Fyber Challenge App.</string>
    <string name="like_phrase">I like this comment.</string>
    <string name="facebook_app_id">220951048341991</string>
    <string name="offer_list_view_sort_title_menu">Sort by Title</string>
    <string name="offer_list_view_sort_payout_menu">Sort by Payout</string>
    <string name="offer_list_view_sort_bookmark_amount_menu">Sort by Bookmark</string>
    <string name="offer_list_view_sort_subscription_amount_menu">Sort by Subscription</string>
    <string name="transition_image">transition_image</string>
    <string name="transition_title">transition_title</string>
    <string name="lorum_ipsum">I like taking up new challenge and learning new technology. And I’m very sociable and love to communicates with all people. I am confident that my leadership experience and expertise in SW development will make me a good SW engineer who works with many colleagues, and should come up with creative awesome ideas. I believe I will be able to make the best use of my experience and capabilities as a SW tech lead.</string>

</resources>
