<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/view_list"
        android:icon="@drawable/ic_menu_list"
        android:title="@string/offer_list_view_list_menu"
        app:showAsAction="ifRoom" />
    <item
    android:id="@+id/view_grid"
    android:icon="@drawable/ic_menu_grid"
    android:title="@string/offer_list_view_grid_menu"
    app:showAsAction="ifRoom" />

    <item
        android:id="@+id/view_sort_title"
        android:icon="@drawable/ic_menu_sort_title"
        android:title="@string/offer_list_view_sort_title_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/view_sort_payout"
        android:icon="@drawable/ic_menu_sort_payout"
        android:title="@string/offer_list_view_sort_payout_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/view_sort_bookmark_amount"
        android:icon="@drawable/ic_menu_sort_bookmark_amount"
        android:title="@string/offer_list_view_sort_bookmark_amount_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/view_sort_subscription_amount"
        android:icon="@drawable/ic_menu_sort_subscription_amount"
        android:title="@string/offer_list_view_sort_subscription_amount_menu"
        app:showAsAction="ifRoom" />
</menu>