<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/subscription"
        android:icon="@drawable/ic_menu_cart"
        android:title="@string/offer_info_view_subscription_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/view_comments"
        android:icon="@drawable/ic_menu_view_comments"
        android:title="@string/offer_info_view_view_comments_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share_facebook"
        android:icon="@drawable/ic_menu_share_facebook_content"
        android:title="@string/offer_info_view_share_facebook_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share_others"
        android:icon="@drawable/ic_share_content"
        android:title="@string/offer_info_view_share_others_menu"
        app:showAsAction="ifRoom" />
</menu>